--- a/phase02/Chat/package.json
+++ b/phase02/Chat/package.json
@@ -15,12 +15,14 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/readline-sync": "^1.4.8",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
   "dependencies": {
     "dotenv": "^17.2.2",
-    "groq-sdk": "^0.32.0"
+    "groq-sdk": "^0.32.0",
+    "readline-sync": "^1.4.10"
   }
 }
