--- a/phase02/Chat/package.json
+++ b/phase02/Chat/package.json
@@ -10,10 +10,12 @@
     "build": "tsc --watch",
     "start": "node dist/index.js"
   },
+  "bin": {
+    "mycli": "dist/index.js"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "devDependencies": {
     "@types/readline-sync": "^1.4.8",
     "nodemon": "^3.1.10",
@@ -21,8 +23,16 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
-    "dotenv": "^17.2.2",
+    "@langchain/community": "^0.3.56",
+    "@langchain/core": "^0.3.77",
+    "@langchain/google-genai": "^0.2.18",
+    "@langchain/pinecone": "^0.2.0",
+    "@langchain/textsplitters": "^0.1.0",
+    "@pinecone-database/pinecone": "^6.1.2",
+    "dotenv": "^16.6.1",
     "groq-sdk": "^0.32.0",
+    "langchain": "^0.3.34",
     "readline-sync": "^1.4.10"
-  }
+  },
+  "description": ""
 }
